PyMaker/datas/object2/RawHTML/i15001/Python_DOC_referPages.whats-wrong-with-maths-script.txt
<div class="post-text" itemprop="text">
<p>Sorry if this is a beginner mistake but... I'm a beginner. Here's the script:</p>
<pre><code>num1 = input("Num1:");
num2 = input("Num2:");

try:
  val = int(num1)
except ValueError:
   print("ERROR : Num1 is not a number!")

   val2 = inf(num2)
   except ValueError:
     print("ERROR : Num2 is not a number!")
print("Maths");
print(num1 + num2);
</code></pre>
<p>What the script is meant to do is add the two numbers and if they typed in something which isn't a number it says it's not a number.
I keep getting errors but I don't know why. NOTE: this is Python.</p>
<p>This is the error I got:</p>
<blockquote>
<pre><code>File "&lt;string&gt;", line 10
except ValueError:
^ SyntaxError: invalid syntax
</code></pre>
</blockquote>
</div>
<div class="post-text" itemprop="text">
<p>programming is all about breaking a (bigger) problem into smaller problems</p>
<p>the first smaller problem you have is to get integer input.  a useful way to do this is abstracting the problem out</p>
<pre><code>def get_integer(prompt=""):
    while True:
         try:
            return int(raw_input(prompt))
         except:
            print "Invalid input. please try again"
</code></pre>
<p>now you can simply call this method when you want an integer from the user</p>
<pre><code>n1 = get_integer("Enter the first integer:")
n2 = get_integer("Enter The second integer:")
</code></pre>
<p>next you must determine how to add those</p>
<pre><code>import operator
def get_operation():
    my_operators = {"+":operator.add,"-":operator.sub}
    while True:
          try:
              return my_operators[raw_input("Enter a + or -:")]
          except KeyError:
              print "Invalid input!"
</code></pre>
<p>now you can combine the 2 easily</p>
<pre><code> n1 = get_integer("Enter the first integer:")
 n2 = get_integer("Enter The second integer:")
 print get_operation()(n1,n2)
</code></pre>
<p>you should see something like</p>
<pre><code>&gt;&gt;&gt; n1 = get_integer("Enter the first integer:")
Enter the first integer:7
&gt;&gt;&gt; n2 = get_integer("Enter The second integer:")
Enter The second integer:8
&gt;&gt;&gt; print get_operation()(n1,n2)
Enter a + or -:+
15
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>The reason you are getting the error you are is a fundamental misunderstanding of how <a href="https://docs.python.org/3/tutorial/errors.html" rel="nofollow"><code>try/except</code> blocks work in Python</a>:</p>
<pre><code>num1 = input("Num1:");
num2 = input("Num2:");
try:
  val = int(num1)
except ValueError:
   print("ERROR : Num1 is not a number!")

   val2 = inf(num2)
   except ValueError:
     print("ERROR : Num2 is not a number!")
print("Maths");
print(num1 + num2);
</code></pre>
<p>Your error points to line 10:</p>
<pre><code>   except ValueError:
</code></pre>
<p>An except block that has no corresponding <code>try</code> block. An <code>except</code> 'catches' errors that occur within a <code>try</code> block, so since there is no <code>try</code> for this <code>except</code> it is a "Syntax Error", which prevents the code from running.</p>
<p>You can correct it by adding a <code>try</code> around where you cast <code>val2</code> as an integer like so:</p>
<pre><code>try:
    val2 = inf(num2)
except ValueError:
    print("ERROR : Num2 is not a number!")
</code></pre>
<p>Of important note, this will not fix your code, as as people have stated <code>inf</code> is a function that isn't declared, and needs to be:</p>
<pre><code>try:
    val2 = int(num2)
except ValueError:
    print("ERROR : Num2 is not a number!")
</code></pre>
</div>
<div class="post-text" itemprop="text">
<pre><code>num1 = input("Num1:");
num2 = input("Num2:");

try:
  val = int(num1)
except ValueError:
   print("ERROR : Num1 is not a number!")


try:
  val = int(num1)
except ValueError:
   print("ERROR : Num2 is not a number!")

print("Maths")
print(num1 + num2)
</code></pre>
<p>What kind of errors were you getting ?
Be sure to checkout python's syntax</p>
</div>
<span class="comment-copy">You are adding the strings, not the numbers. Also, where is the second <code>try</code> statement? I suggest pasting your actual code, instead of re-typing it, so it has no spelling- or indentation-errors or missing parts.</span>
<span class="comment-copy">@tobias_k super new to programming, I have no idea what a second try statement is.</span>
<span class="comment-copy">What errors are you getting? Also, as @tobias_k states your code is invalid as there is no second <code>try</code> statement.</span>
<span class="comment-copy">also, you may want to bear in mind that this won't ever handle floats.  You can cast an int string as a float, but not a float string as an int.</span>
<span class="comment-copy">Yes, its saying you have invalid syntax, because your code is all wrong.</span>
<span class="comment-copy">Why would you reward such a low-effort question with an answer?</span>
<span class="comment-copy">because I am far too nice</span>
<span class="comment-copy">Can someone please explain what I did wrong with the question. It's really bugging me that no one is pointing it out</span>
<span class="comment-copy">@Chickenator if this answer hasn't answered your question why did you accept it? I've put an explanation of your SyntaxError below.</span>
<span class="comment-copy">@Chickenator you did lots wrong ... your indentation is broken ... you have syntax errors ... this is more of a learn2code answer ...</span>
<span class="comment-copy">I did it but I got this error:     File "&lt;string&gt;", line 3     num1 = input("Num1:");        ^ IndentationError: expected an indented block    Which I don't really understand, any help?</span>
<span class="comment-copy">it means your indentation is busted</span>
<span class="comment-copy">That error is literally impossible based on the code you posted. The syntax in python is fundamentally tied to indentation so the smallest mistake will break your code.</span>
<span class="comment-copy">@JoranBeasley so I should start the code again differently?</span>
<span class="comment-copy">My error is: File "&lt;string&gt;", line 10     except ValueError:          ^ SyntaxError: invalid syntax</span>
<span class="comment-copy">It means you have a syntax error at line 10 in your script . Go through the python docs and check out the syntax , maybe indentation ???</span>
